# ccpy

./: README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  example.ini  mypy.ini  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: main.yaml
{{cookiecutter.project_name}}/requirements/: develop.txt  install.txt  package.txt  test.txt
{{cookiecutter.project_name}}/src/{{cookiecutter.main_package_name}}/: __init__.py  _meta.py  cli.py  main.py
{{cookiecutter.project_name}}/test/: test_functional.py  test_unit.py
{{cookiecutter.project_name}}/tests/: test_functional.py
