#


[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 43.0.0',  # https://github.com/pypa/setuptools/pull/1634
]


[project]
name = "{{cookiecutter.project_name}}"
#
dependencies = [
    "pyramid",
    "waitress",
]
optional-dependencies.dev-dev = [
    "watchdog",
]
optional-dependencies.dev-package = [
    "build",
    "pex",
    "twine",
]
optional-dependencies.dev-test = [
    "mypy",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-mypy",
    "pytest-pycodestyle",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-yapf3",
    "yapf",
    "WebTest",
]
requires-python = ">=3.8"
#
scripts.{{cookiecutter.project_name}} = "pyramid.scripts.pserve:main"
entry-points."paste.app_factory".main_entry_point = "{{cookiecutter.main_package_name}}.main:entry_point"
#
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}" },
]
description = "{{cookiecutter.project_name}} library"
license.text = "Apache-2.0"
readme = "README.rst"
urls.PyPI = "https://pypi.org/project/{{cookiecutter.project_name}}/"
urls.GitHub = "https://github.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}"
urls.GitLab = "https://gitlab.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}"
#
dynamic = [
    "version",
]


# EOF
