#


[check]
metadata = 1
strict = 1


[metadata]
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.project_name}} library
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = {{cookiecutter.project_name}}
project_urls =
    GitHub = https://github.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}
    GitLab = https://gitlab.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}
url = {{cookiecutter.url}}


[options]
install_requires =
    importlib-metadata
package_dir =
    = src
packages = find:


[options.extras_require]
dev_package =
    twine
    wheel
dev_test =
    pydocstyle
    pytest
    pytest-pydocstyle
    pytest-pycodestyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


[tool:pytest]
addopts =
    --disable-pytest-warnings
    --pylint-error-types='CEFIRW'
    --yapfdiff


# EOF
