#


[bdist_zapp]
entry_point = {{cookiecutter.main_package_name}}.cli:main


[check]
metadata = 1
strict = 1


[metadata]
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.project_name}} application
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = {{cookiecutter.project_name}}
project_urls =
    GitHub = https://github.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}
    GitLab = https://gitlab.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}
url = {{cookiecutter.url}}


[options]
install_requires =
    # ...
package_dir =
    = src
packages = find:


[options.entry_points]
console_scripts =
    {{cookiecutter.project_name | lower}} = {{cookiecutter.main_package_name}}.cli:main


[options.extras_require]
dev_package =
    twine
    wheel
    zapp
dev_test =
    mypy
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-mypy
    pytest-pycodestyle
    pytest-pydocstyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


# EOF
